--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -124,10 +124,10 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: troccoli/new-blog # <gh-username>/<repo>
-    repo_id: R_kgDONW-LEw
-    category:
-    category_id:
+    repo: troccoli/troccoli.github.io # <gh-username>/<repo>
+    repo_id: R_kgDONXZB1g
+    category: "Comments"
+    category_id: DIC_kwDONXZB1s4Ckzj6
     mapping: # optional, default to 'pathname'
     strict: # optional, default to '0'
     input_position: top # optional, default to 'bottom'
